<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/imc_img"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/ViewRelatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginTop="4dp"
        android:text="@string/nome"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18sp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/E_Nome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ViewRelatorio"
        android:layout_alignEnd="@+id/E_Altura"
        android:layout_below="@+id/ViewRelatorio" />

    <TextView
        android:id="@+id/ViewIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/E_Nome"
        android:layout_alignStart="@+id/E_Nome"
        android:text="@string/idade"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/E_Idade"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:layout_alignStart="@+id/ViewIdade"
        android:layout_alignEnd="@+id/ViewIdade"
        android:layout_below="@+id/ViewIdade" />

    <TextView
        android:id="@+id/ViewPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ViewIdade"
        android:layout_centerHorizontal="true"
        android:text="@string/peso"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/E_Peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ViewPeso"
        android:layout_alignStart="@+id/ViewPeso"
        android:layout_alignEnd="@+id/ViewPeso"
        android:layout_centerHorizontal="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/ViewAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ViewIdade"
        android:layout_marginStart="70dp"
        android:layout_toEndOf="@+id/ViewPeso"
        android:text="@string/altura"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/E_Altura"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:layout_alignStart="@+id/ViewAltura"
        android:layout_alignEnd="@+id/ViewAltura"

        android:layout_below="@+id/ViewAltura" />

    <Button
        android:id="@+id/buttonRelatorioNutricional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/E_Altura"
        android:layout_alignLeft="@+id/E_Idade"
        android:layout_alignRight="@+id/E_Altura"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="1dp"
        android:text="@string/relatorio"
        android:textSize="18sp"
        android:textStyle="bold"/>
</RelativeLayout>
